# agentops

./: README.md  pyproject.toml  requirements.txt
agentops_runtime/: __init__.py
agentops_runtime/core/: __init__.py  config.py  tracing.py  types.py
agentops_runtime/modules/: __init__.py  context_decay.py
agentops_runtime/modules/router/: __init__.py  budget_optimizer.py  handoff_manager.py  intent_classifier.py  router_trace.py  schemas.py  strategy_selector.py
app/: streamlit_app.py
app/pages/: 05_Context_Decay.py
docs/: week_04_strategy_router.md
examples/: router_examples.py  sample_memory.json  sample_requests.json
tests/: test_router.py
