[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentops-runtime"
version = "0.1.0"
description = "Modular AgentOps Runtime — Week 4: Strategy Router"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agents", "llm", "routing", "orchestration", "agentops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.0",
  "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.0",
  "mypy>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["agentops_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
